Fixed section 3 boxes alignment to be more centereed

--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ ul {
 
 /*Section two------------------------------------------------------------*/
 .two{
-    text-align: center;
     padding: 36px;
     margin-bottom: 36px;
 }
@@ -87,23 +86,32 @@ ul {
     font-weight: 900;
     color: #1F2937;
     margin-bottom: 24px;
+    text-align: center;
 }
 
 .two ul{
     justify-content: center;
-    gap: 18px;
+    gap: 100px;
 }
 
 .two li{
     max-width: 150px;
-    align-items: center;
+    flex-direction: column;
+    align-content: center;
+    gap: 12px;
 }
 
 .box{
     padding: 24px;
     border:2px solid  #3882F6;
-    height: 80px;
-    width: 80px;
+    border-radius: 8px;
+    height: 100px;
+    width: 100px;
+}
+
+.two p{
+    text-align: center;
+    padding-top: 16px;
 }
 
 
@@ -131,8 +139,7 @@ ul {
 
 /*Section four------------------------------------------------------------*/
 .four{
-    margin: 64px;
-    gap: 24px;
+    padding: 64px;
     justify-content: center;
 }
 
@@ -143,7 +150,7 @@ ul {
     justify-content: space-around;
     align-items: center;
     gap: 16px;
-    max-width: 500px;
+    max-width: 750px;
 }
 
 .four .main-text{
@@ -152,9 +159,9 @@ ul {
 
 .four .button{
     color: white;
-    border: 4px;
-    border-color: white;
-    padding: 12px;
+    border: 2px solid white;
+    border-radius: 8px;
+    padding: 10px 16px;
 }
 
 /*Footer---------------------------------------------------------------*/
